--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,10 +10,12 @@
 analyzer:
   errors:
     avoid_print: ignore
+    deprecated_member_use: ignore
     empty_catches: ignore
     non_constant_identifier_names: ignore
     sized_box_for_whitespace: ignore
     unnecessary_import: ignore
+    unused_import: ignore
     unused_local_variable: ignore
 include: package:flutter_lints/flutter.yaml
 
